--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en">
+<html lang="EN-8">
 <head>
   <meta charset="UTF-8">
-  <title>Taskifyr</title>
+  <title>Task Manager</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <!-- Add your header content here -->
-  </header>
+  <h1>Task Manager</h1>
 
-  <main>
-    <!-- Add your main content here -->
-  </main>
+  <form id="taskForm">
+    <label for="title">Title:</label>
+    <input type="text" id="title" required>
 
-  <footer>
-    <!-- Add your footer content here -->
-  </footer>
+    <label for="description">Description:</label>
+    <input type="text" id="description" required>
+
+    <button type="submit">Add Task</button>
+  </form>
+
+  <ul id="taskList" class="task-list"></ul>
 
   <script src="js/app.js"></script>
 </body>
