--- a/public/index.html
+++ b/public/index.html
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Task Manager</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <title>Taskifyr</title>
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
   <header>
-    <h1>Task Manager</h1>
+    <h1>Taskifyr</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Tasks</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/register">Register</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <section id="taskFormSection">
-      <h2>Add Task</h2>
-      <form id="taskForm">
-        <div class="form-group">
-          <label for="title">Title:</label>
-          <input type="text" id="title" required>
-        </div>
-
-        <div class="form-group">
-          <label for="description">Description:</label>
-          <input type="text" id="description" required>
-        </div>
-
-        <button type="submit">Add Task</button>
-      </form>
+    <section class="task-section">
+      <h2>Tasks</h2>
+      <ul id="taskList">
+        <li class="task-item">
+          <h3>Task 1</h3>
+          <p>This is task 1</p>
+        </li>
+        <li class="task-item">
+          <h3>Task 2</h3>
+          <p>This is task 2</p>
+        </li>
+        <li class="task-item">
+          <h3>Task 3</h3>
+          <p>This is task 3</p>
+        </li>
+      </ul>
     </section>
 
-    <section id="taskListSection">
-      <h2>Task List</h2>
-      <ul id="taskList" class="task-list"></ul>
+    <section class="form-section">
+      <h2>Add a new task</h2>
+      <form id="taskForm">
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input type="text" id="title">
+        </div>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <input type="text" id="description">
+        </div>
+        <button type="submit">Add Task</button>
+      </form>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2023 Task Manager</p>
+    <p>&copy; TASKIFYR</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
