grid for completed tasks

--- a/public/Login and Reg Pages/register.html
+++ b/public/Login and Reg Pages/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
     </header>
     <main>
         <div class="form-container">
-            <h2>Login</h2>
-            <form id="loginForm">
+            <h2>Register</h2>
+            <form id="registerForm">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" placeholder="Username" required>
@@ -22,13 +22,13 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Password" required>
                 </div>
-                <button type="submit">Login</button>
+                <button type="submit">Register</button>
             </form>
         </div>
     </main>
     <footer>
         <p>&copy; 2023 TASKIFYR</p>
     </footer>
-    <script src="/public/js/login.js"></script>
+    <script src="/public/js/register.js"></script>
 </body>
 </html>
