--- a/FE - public/index.html
+++ b/FE - public/index.html
@@ -294,6 +294,6 @@
             <p>&copy; 2023 TASKIFYR</p>
         </footer>
     </div>
-    <script src="public/js/main.js"></script>
+    <script src="public/js/app.js"></script>
 </body>
 </html>
